--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,21 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.mingrisoft.anxingdemo3">
 
+    <instrumentation
+        android:name="android.test.InstrumentationTestRunner"
+        android:label="Tests for com.baidu.speech.recognizerdemo"
+        android:targetPackage="com.mingrisoft.anxingdemo3" />
+
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
+    <!-- begin: baidu speech sdk  权限 -->
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
+    <!-- end: baidu speech sdk  权限 -->
     <application
         android:allowBackup="true"
         android:icon="@mipmap/appicon"
@@ -9,6 +24,20 @@
         android:roundIcon="@mipmap/ic_launcher"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <meta-data
+            android:name="com.baidu.speech.APP_ID"
+            android:value="11266463" />
+        <meta-data
+            android:name="com.baidu.speech.API_KEY"
+            android:value="u0AIfmBN6BSfeVeS7rzVmrGo" />
+        <meta-data
+            android:name="com.baidu.speech.SECRET_KEY"
+            android:value="PaREOHHhImIIAoUF356SNOenj5oE0RLh" />
+
+        <service
+            android:name="com.baidu.speech.VoiceRecognitionService"
+            android:exported="false" />
+
         <activity android:name=".UI.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -22,7 +51,17 @@
         <activity android:name=".UI.AxConnecter" />
         <activity android:name=".UI.UrgencyConnect" />
         <activity android:name=".UI.AutonymAttestion" />
-        <activity android:name=".UI.AXPopWindows"></activity>
+        <activity android:name=".UI.AXPopWindows" />
+        <activity android:name=".UI.activity.ActivityOnline" />
+        <activity android:name=".UI.activity.ActivityAllRecog" />
+        <activity android:name=".UI.baidu.OnlineSetting" />
+
+        <service
+            android:name=".UI.service.soundrecording"
+            android:exported="false" />
+
+
+        <activity android:name=".UI.activity.VoiceMonitorActivity"></activity>
     </application>
 
 </manifest>
